Add jest config. Add new fields to blog schema.

--- a/src/content/posts/convert-images-to-text.mdx
+++ b/src/content/posts/convert-images-to-text.mdx
@@ -1,7 +1,11 @@
 ---
 title: 'Converting Images to Text: An Introduction'
 description: 'Explore the fascinating world of converting images to text and discover its applications in various industries.'
+date: 2023-05-02
+author: '@otto-camp'
 ---
+
+![Hello](https://raw.githubusercontent.com/otto-camp/textsnap/main/images/TextSnap1.png)
 
 Have you ever wondered how computers can extract meaningful information from images? Image-to-text conversion, also known as Optical Character Recognition (OCR), is a powerful technology that enables machines to recognize and extract text from images. In this blog post, we will delve into the exciting field of image-to-text conversion and explore its applications in different industries.
 
