Add metadata to blogs and table of contents section.

--- a/src/content/posts/convert-images-to-text.mdx
+++ b/src/content/posts/convert-images-to-text.mdx
@@ -5,6 +5,8 @@ date: 2023-05-02
 author: '@otto-camp'
 ---
 
+<Toc />
+
 ![Hello](https://raw.githubusercontent.com/otto-camp/textsnap/main/images/TextSnap1.png)
 
 Have you ever wondered how computers can extract meaningful information from images? Image-to-text conversion, also known as Optical Character Recognition (OCR), is a powerful technology that enables machines to recognize and extract text from images. In this blog post, we will delve into the exciting field of image-to-text conversion and explore its applications in different industries.
@@ -15,15 +17,15 @@ Image-to-text conversion involves the process of analyzing an image and extracti
 
 ## Applications in Various Industries
 
-### 1. Document Digitization
+### Document Digitization
 
 Image-to-text conversion plays a vital role in the digitization of physical documents. By converting printed or handwritten text from documents into digital format, organizations can achieve better data accessibility, searchability, and preservation. This technology greatly enhances document management processes, improves efficiency, and reduces the need for manual data entry.
 
-### 2. Text Analysis and Data Extraction
+### Text Analysis and Data Extraction
 
 Extracting text from images enables businesses to perform advanced text analysis and extract valuable information. For example, in the retail industry, OCR technology can be used to extract product information from images, such as barcodes or serial numbers. In the healthcare sector, it can help extract data from medical forms or prescription labels. These applications save time, improve accuracy, and facilitate data-driven decision-making.
 
-### 3. Accessibility and Assistive Technology
+### Accessibility and Assistive Technology
 
 Image-to-text conversion plays a crucial role in improving accessibility for individuals with visual impairments. By converting text within images to a readable format, visually impaired individuals can access information that would otherwise be inaccessible. This technology can be integrated into assistive technologies such as screen readers or text-to-speech converters, making content more inclusive and enabling equal access to information.
 
