Add images to posts.

--- a/src/content/posts/convert-images-to-text.mdx
+++ b/src/content/posts/convert-images-to-text.mdx
@@ -3,11 +3,12 @@ title: 'Converting Images to Text: An Introduction'
 description: 'Explore the fascinating world of converting images to text and discover its applications in various industries.'
 date: 2023-05-02
 author: '@otto-camp'
+image: 'https://res.cloudinary.com/dl9idq2zx/image/upload/v1688466857/textsnap/grdmit1efmupzhfpjnjw.webp'
 ---
 
 <Toc />
 
-![Hello](https://raw.githubusercontent.com/otto-camp/textsnap/main/images/TextSnap1.png)
+![Converting Images to Text: An Introduction](https://res.cloudinary.com/dl9idq2zx/image/upload/v1688466857/textsnap/grdmit1efmupzhfpjnjw.webp)
 
 Have you ever wondered how computers can extract meaningful information from images? Image-to-text conversion, also known as Optical Character Recognition (OCR), is a powerful technology that enables machines to recognize and extract text from images. In this blog post, we will delve into the exciting field of image-to-text conversion and explore its applications in different industries.
 
